--- a/src/gameover.css
+++ b/src/gameover.css
@@ -11,6 +11,7 @@ body{
     position: absolute;
     z-index: 2;
     width: 100%;
+    height: 100%;
     display: flex;
     justify-content: center; 
     align-items: center;
