--- a/src/game.css
+++ b/src/game.css
@@ -6,6 +6,39 @@
 body{
     background-color: #0E1A10;
 }
+
+/* popup */
+#popup{
+    background-color: rgba(0, 0, 0, 0.666);
+    height: 90%;
+    width: 80%;
+    top: 40px;
+    left:150px;
+    position: fixed;
+    display: none; /*display flex in popup javascript*/
+    justify-content: center;
+    border-radius: 10px;
+    align-items: center;
+    box-shadow: 5px 5px 20px 10px gray ;
+    z-index: 99;
+}
+#cross{
+    border-radius: 100%;
+    position: absolute;
+    top: 10px;
+    right: 100px;
+    color: red;
+    font-weight: 900;
+    font-size: 30px;
+    font-family: poppins;
+    background-color: black;
+}
+#cross:hover{
+    background-color: white;
+    color: green;
+    cursor: crosshair;
+}
+/*  */
 #black-screen{                                  /*BLACK BODY STYLING*/ 
     background-color: black;
     position: absolute;
@@ -168,5 +201,34 @@ body{
         width: initial;
         position: initial;
         border-radius: 10px;
+    }
+    #popup{
+        width: initial;
+        height: 95%;
+        background-color: rgb(0 0 0 / 97%);
+        top: 22px;
+        left: 0; 
+        position: fixed;
+        justify-content: center;
+        border-radius: 10px;
+        align-items: center;
+        box-shadow: 5px 5px 20px 10px gray;
+        z-index: 99;
+        overflow: scroll;
+    }
+    #cross{
+        border-radius: 50%;
+        position: absolute;
+        top: 10px;
+        right: 5px;
+        color: red;
+        font-weight: 900;
+        font-size: 30px;
+        font-family: arial;
+        background-color: white;
+    }
+    #img{
+        max-width: 100%;
+        height: auto;
     }
 }
