--- a/src/game.css
+++ b/src/game.css
@@ -176,6 +176,21 @@ body{
     cursor: pointer;
 }
 
+#saveGame,#loadGame{
+    height: 40px;
+    padding: 5px;
+    margin: 2px;
+}
+#saveDrive{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    border: 1px solid white;
+    margin: 3px;
+    margin-top: 3px;
+
+}
+
 @media(max-width:500px) and (max-height:1000px){
     body{
         overflow: hidden;
