--- a/src/gameover.css
+++ b/src/gameover.css
@@ -34,6 +34,7 @@ h3{
     margin-right: 30%;
     font-size: 30px;
     text-align: justify;
+    padding-top: 50px;
     color: #00FFC2;
 }
 
@@ -106,6 +107,8 @@ h3{
     }
     #advice{
         font-size: 25px;
+        text-align: justify;
+
     }
     #black-screen-text{
         margin-left: 10%;
