--- a/instructions.css
+++ b/instructions.css
@@ -203,6 +203,10 @@ p{
     border: 1px solid rgb(0, 255, 119);
 }
 
+.underlineglow{
+    border-bottom: 1px solid rgb(0, 255, 119);
+}
+
 
 @media(max-width:500px) and (max-height:1000px){
     #container {
