media query bug fixed

--- a/src/game.css
+++ b/src/game.css
@@ -201,6 +201,7 @@ body{
     #black-screen-text{
         margin-left: 10%;
         margin-right: 10%;
+        font-size: 25px;
     }
     #sec{
         flex-direction: column;
