--- a/src/gameover.css
+++ b/src/gameover.css
@@ -99,6 +99,12 @@ h3{
 }
 
 @media(max-width:500px) and (max-height:1000px){
+    body{
+        background-color: #000;
+    }
+    #black-screen{
+        height: initial;
+    }
     h1{
         font-size: 40px;
     }
