story nodes till historian added

--- a/src/game.css
+++ b/src/game.css
@@ -217,7 +217,7 @@ body{
         background-color: black;
         padding: 10px;
         margin: 0;
-        width: initial;
+        width: 90%;
         position: initial;
         border-radius: 10px;
     }
