--- a/src/game.css
+++ b/src/game.css
@@ -251,3 +251,23 @@ body{
         height: auto;
     }
 }
+
+@media(max-width:400px) and (max-height:850px){
+    body{
+        overflow: hidden;
+    }
+    #black-screen-text{
+        margin-left: 10%;
+        margin-right: 10%;
+        font-size: 19px;
+    }
+    #story-node{
+        font-size: 18px;
+    }
+}
+
+@media(max-width:321px) and (max-height:801px){
+    #stody-node{
+        font-size: 22px;
+    }
+}
