--- a/src/game.css
+++ b/src/game.css
@@ -5,6 +5,7 @@
 }
 body{
     background-color: #0E1A10;
+    overflow: hidden;
 }
 
 /* popup */
@@ -66,7 +67,7 @@ body{
     color: white;
     margin-left: 30%;
     margin-right: 30%;
-    font-size: 30px;
+    font-size: 25px;
     text-align: justify;
 }
 /* DISPLAY NONE BLACK BODY */
@@ -266,7 +267,7 @@ body{
     }
 }
 
-@media(max-width:321px) and (max-height:801px){
+@media(max-width:361px) and (max-height:801px){
     #stody-node{
         font-size: 22px;
     }
